Bugfix for too large textbox

--- a/frontend/src/components/TreeViewer/TreeViewer.module.css
+++ b/frontend/src/components/TreeViewer/TreeViewer.module.css
@@ -1,10 +1,3 @@
 .button {
   color: #757575; /* grey.600 */
 }
-
-.article {
-  display: none;
-  margin: 2%;
-  width: 96%;
-  overflow-y: scroll;
-}
